--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <i class="fa fa-lock cust" aria-hidden="true"></i>
           <input type="password" name="pass" id="pass" placeholder="Enter Password">
           <i class="fa fa-eye eye" aria-hidden="true" id="eye"></i><br />
-          <input type="submbit" name="submit" value="LOGIN"><br />
+          <input type="subbmit" name="submit" value="LOGIN"><br />
           <a href="https://kiouane.github.io/demeter/">Forget Password</a>
         </div>
       </form>
